--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "lucide-react": "0.544.0",
     "react": "19",
     "react-dom": "19",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "6.8.1",
     "sockjs-client": "1.6.1",
     "tailwind-merge": "1.14.0",
